@@ -84,7 +84,11 @@ while test $# -gt 0; do
 done
 
 the_libs="@XSLT_LIBDIR@ @XSLT_LIBS@"
-the_flags="$the_flags -I$includedir `@XML_CONFIG@ --cflags`"
+if test "$includedir" != "/usr/include"; then
+    the_flags="$the_flags -I$includedir `@XML_CONFIG@ --cflags`"
+else
+    the_flags="$the_flags `@XML_CONFIG@ --cflags`"
+fi
 
 if $cflags; then
     all_flags="$the_flags"
