@@ -1,3 +1,7 @@
+Mon Feb 11 15:01:42 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* xslt-config: fixing Red Hat bug #59508
+
 Mon Feb 11 14:27:25 CET 2002 Daniel Veillard <daniel@veillard.com>
 
 	* tests/docs/Makefile.am tests/docs/bug-72.xml
